<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="LogInActivity"
    android:background="@color/white"
    android:orientation="vertical">

    <!-- Margin top: 40dp added due to hidden action and status bar-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:text="@string/app_name"
        android:textColor="@color/colorSecondaryDark"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/txtAddSong"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:hint="@string/songName"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_baseline_audiotrack_24"
        android:drawablePadding="10dp"
        android:backgroundTint="@color/colorSecondary"
        android:textColor="@color/colorSecondary"
        android:textColorHint="@color/colorSecondaryLight"/>

    <EditText
        android:id="@+id/txtAddArtist"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorSecondary"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:hint="@string/artistName"
        android:textColor="@color/colorSecondary"
        android:textColorHint="@color/colorSecondaryLight" />

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:textAlignment="center"
        android:textColor="@color/colorError"
        android:textSize="18sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/addSongButton"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/colorSecondary"
        android:text="@string/addButton"
        android:textColor="@color/white" />



</LinearLayout>