<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtLocatie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:text="@string/default_txtLocatie"
        android:textAlignment="viewEnd">

    </TextView>


    <SeekBar
        android:id="@+id/locatieSlider"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_below="@+id/txtLocatie"
        android:fadeScrollbars="true"
        android:indeterminate="false"
        android:max="100"
        android:progress="10" />

    <android.support.v7.widget.RecyclerView

        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/locatieSlider"
        android:layout_alignParentBottom="false"
        android:background="@drawable/routes_gradient" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/routes_error_textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingEnd="10sp"
        android:text="@string/routes_fetching_error"
        android:textColor="@color/colorError"
        android:textSize="30sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_retry_routes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="40dp"
        android:text="@string/retry"
        android:textSize="30sp"
        android:visibility="gone" />

</RelativeLayout>